--- a/app/style.css
+++ b/app/style.css
@@ -1,18 +1,43 @@
-#calendario {
-  border: 1px solid black;
-}
-.calendario {
-  display: grid;
-  grid-template-columns: repeat(7, auto);
-  margin: 3rem;
+* {
+  text-align: center;
 }
 
-.calendario > * {
-  margin: 5px;
+p {
+  margin: 0;
+}
+
+.conteiner {
+  margin: auto;
+  border: 1px solid black;
+}
+
+.calendario-header {
+  height: 15vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.calendario {
+  width: 90vw;
+  height: 90vh;
+  display: grid;
+  grid-template-columns: repeat(7, 13%);
+  grid-template-rows: 4% repeat(5, 16%);
+  justify-content: space-around;
+  align-content: space-around;
+  margin: auto;
 }
 
 .dia {
-  width: 30px;
-  height: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
   border: 1px solid black;
+}
+
+.btn {
+  width: 10vw;
+  height: 50%;
+  margin: 0px 30px;
 }
